--- a/ML (extra)/data_analysis_with_pandas_1_Series.ipynb
+++ b/ML (extra)/data_analysis_with_pandas_1_Series.ipynb
@@ -207,24 +207,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "thr    25\n",
+      "thu    25\n",
       "sat    40\n",
       "dtype: int64\n",
-      "tue    30\n",
-      "thr    25\n",
-      "dtype: int64\n"
+      "tue    30.0\n",
+      "thr     NaN\n",
+      "dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "print(sw[  [3,5] ])\n",
+    "print(sw[[3,5]])\n",
     "print(sw[ [ \"tue\", \"thr\"] ])"
    ]
   },
@@ -319,47 +319,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mon    20.0\n",
-      "tue    30.0\n",
-      "wed    20.0\n",
-      "thr    25.0\n",
-      "fri    30.0\n",
-      "sat    40.0\n",
-      "sun     0.0\n",
+      "mon    0.009766\n",
+      "tue    0.014648\n",
+      "wed    0.009766\n",
+      "thu    0.012207\n",
+      "fri    0.014648\n",
+      "sat    0.019531\n",
+      "sun    0.000000\n",
       "dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "sw = sw /2\n",
+    "sw = (sw /2)\n",
     "print(sw)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mon    20\n",
+      "tue    30\n",
+      "wed    20\n",
+      "thu    25\n",
+      "fri    30\n",
+      "sat    40\n",
+      "sun     0\n",
+      "dtype: int64\n",
+      "True\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'mon' in sw"
+    "sw = pd.Series([20, 30, 20, 25, 30, 40, 0], \n",
+    "               index = ['mon', 'tue', 'wed', 'thu','fri', 'sat', 'sun'])\n",
+    "print(sw)\n",
+    "\n",
+    "print('sun' in sw)\n",
+    "20 in sw.values"
    ]
   },
   {
