pandas practice work

--- a/ML (extra)/data_analysis_with_pandas_1_DataFrame.ipynb
+++ b/ML (extra)/data_analysis_with_pandas_1_DataFrame.ipynb
@@ -951,18 +951,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       year   state  pop debt\n",
+      "one    2000    Ohio  1.5  NaN\n",
+      "two    2001    Ohio  1.7  NaN\n",
+      "three  2002    Ohio  3.6  NaN\n",
+      "four   2001  Nevada  2.4  NaN\n",
+      "five   2002  Nevada  2.9  NaN\n",
+      "six    2003  Nevada  3.2  NaN\n"
+     ]
+    }
+   ],
    "source": [
     "# Mind Teaser !!\n",
     "#Assigning a column that already exist will ________ and \n",
-    "# assigning a column that does not exist will ________\n"
+    "# assigning a column that does not exist will ________\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "state = ['Ohio', 'Ohio', 'Ohio', 'Nevada', 'Nevada', 'Nevada']\n",
+    "\n",
+    "data = {'state': state ,\n",
+    "        'year' : [2000, 2001, 2002, 2001, 2002, 2003],\n",
+    "        'pop'  : [1.5, 1.7, 3.6, 2.4, 2.9, 3.2]}\n",
+    "\n",
+    "frame2 = pd.DataFrame(data, columns=['year', 'state', 'pop', 'debt'],\n",
+    "        index=['one', 'two', 'three', 'four','five', 'six'])\n",
+    "print(frame2)\n",
+    "print()\n",
+    "frame2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1694,6 +1721,136 @@
     "\n",
     "#end of chapter 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>D1</th>\n",
+       "      <th>D2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>20</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>24</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>28</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>32</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>36</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>40</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>44</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>48</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>52</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>56</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    D1  D2\n",
+       "15  20  23\n",
+       "16  24  27\n",
+       "17  28  31\n",
+       "18  32  35\n",
+       "19  36  39\n",
+       "20  40  43\n",
+       "21  44  47\n",
+       "22  48  51\n",
+       "23  52  55\n",
+       "24  56  59\n",
+       "25  60   0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "dates = np.arange(15,26)\n",
+    "Days1 = np.arange(20,61,4)\n",
+    "Days2 = np.arange(23,61,4)\n",
+    "Days2 = np.append(Days2,0)\n",
+    "S1 = pd.Series(Days1,index = dates,name = \"D1\")\n",
+    "S2 = pd.Series(Days2,index = dates,name = \"D2\")\n",
+    "data = {\"D1\":S1,\"D2\":S2}\n",
+    "frame = pd.DataFrame(data)\n",
+    "frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
