--- a/ML/QUARTER 2 Work/Deep learning/MNIST dataset.ipynb
+++ b/ML/QUARTER 2 Work/Deep learning/MNIST dataset.ipynb
@@ -693,22 +693,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
-      "[0 1 2 3 4 5 6 7 8 9]\n"
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "import numpy as np\n",
-    "print(np.arange(10))"
+    "print(np.arange(10))\n",
+    "print(y_test[100])"
    ]
   },
   {
